AI-JADEDEVS4/src/objects/Businessdays__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Business_Days__c</fullName>
        <label>Contact Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Days__c</fullName>
        <label>Lead Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_15_Days__c</fullName>
        <label>Opportunity 15 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_7_Days__c</fullName>
        <label>Opportunity 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business days</label>
</CustomObject>